# gp--

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: .main.c.swp  lexer.h  lexical.h  lexical_state_machine.h  main.c  main.cc  old_lexical.h  state_machine.h
src/code_gen/: generator.c  generator.h  stringbuilder.c  stringbuilder.h  wml.c  wml.h  x86.c  x86.h
src/lexer/: .lexer.h.swp  .lexical_state_machine.h.swp  lexer.c  lexer.h  lexical_state_machine.c  lexical_state_machine.h  token.c  token.h
src/parser/: base_parser.h  base_parser.tab.c  base_parser.y  parser.h
src/portability/: portability.h
src/scope/: darray.h  khash.h  scope.h  symrec.c  symrec.h  type.c  type.h
src/state_machine/: .state_machine.h.swp  state_machine.c  state_machine.h
src/symrec/: symrec.h
tests/: euclid.pa  purely_syntactic.pa  stupid.pa  test.pa
